# moldy

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .todo-sqlite-cli  CLAUDE.md  Cargo.toml  NOTES.md  README.md  about.toml  moldy.toml  tasks.py
.github/workflows/: build.yml
doc/: moldy.1
presets/: riot.toml
presets/c-cpp/: linux-kernel.toml
presets/python/: black.toml  pep8.toml
presets/rust/: rustfmt-compat.toml
scripts/: coverage-gate.sh
src/: config.rs  error.rs  lib.rs  main.rs  presets.rs  toolchain.rs
src/formatter/: c_cpp.rs  mod.rs  output.rs  python.rs  rust.rs
tests/: acceptance_test.rs  corpus_test.rs  python_corpus_test.rs  rust_corpus_test.rs
tests/acceptance/c/negative/: extra_closing_brace.c.expected  truncated_declaration.c.expected  unclosed_brace.c  unclosed_brace.c.expected  unclosed_paren.c.expected  unterminated_block_comment.c  unterminated_block_comment.c.expected  unterminated_string.c  unterminated_string.c.expected
tests/acceptance/c/positive/: comments_and_strings.c  comments_and_strings.c.expected  control_flow.c  control_flow.c.expected  functions_and_declarations.c  functions_and_declarations.c.expected  pointers_and_arrays.c  pointers_and_arrays.c.expected  preprocessor_and_macros.c  structs_unions_enums.c  structs_unions_enums.c.expected
tests/acceptance/cpp/negative/: mismatched_brace_paren.cpp.expected  truncated_class.cpp  truncated_class.cpp.expected  unclosed_brace.cpp  unclosed_brace.cpp.expected  unclosed_template_angle.cpp  unclosed_template_angle.cpp.expected  unterminated_string.cpp
tests/acceptance/cpp/positive/: classes_and_inheritance.cpp  classes_and_inheritance.cpp.expected  exceptions_and_raii.cpp  exceptions_and_raii.cpp.expected  modern_cpp_features.cpp  modern_cpp_features.cpp.expected  operators_and_overloading.cpp  operators_and_overloading.cpp.expected  templates_and_namespaces.cpp  templates_and_namespaces.cpp.expected
tests/corpus/: basic.c  basic.c.expected  cpp_templates.cpp  cpp_templates.cpp.expected  linked_list.c  linked_list.c.expected  unicode_comments.c  unicode_comments.c.expected
tests/python_corpus/: basic.py.expected  decorators.py  messy.py  messy.py.expected
tests/rust_corpus/: basic.rs  basic.rs.expected  items.rs  misc.rs.expected
